# vna

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile.in  README.md  configure.ac  deploy_linux.sh  deploy_macos.sh  deploy_windows.sh  env.cfg  generate_source_tarball  lo_amp.cct  lo_amp_2.cct  lo_amp_3.cct  polar_view.H  run  vna.glade  vna_main.C  vna_ui_core.C
appimage/: default.desktop
enclosure/: front_back_panel.fcstd
include/: xavna.h
lib_mock/: libxavna_mock_ui.so.1  libxavna_mock_ui.so.1.0  libxavna_mock_ui.so.1.0.0
libxavna/: CMakeLists.txt  Makefile.am  README.md  calibration.C  platform_abstraction.C  platform_abstraction_windows.C  xavna.C  xavna_cpp.C
libxavna/include/: calibration.H  common.H  platform_abstraction.H  xavna.h  xavna_cpp.H  xavna_generic.H
libxavna/xavna_mock_ui/: CMakeLists.txt  xavna_mock.C  xavna_mock_ui.C  xavna_mock_ui.H  xavna_mock_ui.pro  xavna_mock_ui_dialog.C
pcb/: README.md  bb_amp.asc  bb_amp_2.asc  cmy210_matching.cct  coupler.pcb  fpga_pins.xcf  main.gsch2pcb  main.pcb  main.sch  main2.gsch2pcb  main2.mapping.csv  main2.pcb  main2.sch  main2_2.gsch2pcb  main2_2.mapping.csv  main2_2.pcb  main2_2.sch  main3.gsch2pcb  main3.pcb  main3.sch  main3_2.gsch2pcb  main3_2.mapping.csv  main3_2.pcb  main3_2.sch  pwr_filtering.asc  rx_lpf.cct  tx.gsch2pcb  tx.pcb  tx.sch  vna_tester.gsch2pcb  vna_tester.pcb  vna_tester.sch
pictures/: fpga_logic.xml  overall_diagram.xml  vna_main.xml  vna_tx.xml
tester/: Makefile  main.C  platform.H  platform_opi.C  simple_ili9341.H  ui.H
vhdl/: .gitignore  adf4350_calc.vhd  cic.vhd  (+19 more)
(+126 files in other folders)
